# Kinda-AI

./: .gitignore  Cargo.toml  README.md  ai
src/: lib.rs  main.rs  neural_network.rs  tools.rs  train_neural_network.rs  vector_tools.rs
src/ai/: ai.rs  test_ai.rs  train_ai.rs
src/ais/: ai.rs  test_ai.rs  train_ai.rs
src/neural/: ai.rs  mod.rs  test_ai.rs  train_ai.rs
src/tools/: mod.rs  vector_tools.rs
