[package]
name = "NeuralN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
crossbeam-channel = "0.5.7"
num_cpus = "1.15.0"
rand = "0.8.5"
rayon = "1.7.0"
serde ={ version = "1.0.159", features = ['derive'] }
serde_json = "1.0.95"
