[package]
name = "dumb_ai"
version = "2.0.0"
edition = "2021"
authors = ["Creedmastr"]
description = "My own AI, which doesn't work that great, but it still works!"
license = "MIT"
keywords = ["ai", "simple-to-use"]
repository = "https://github.com/Creedmastr/Kinda-AI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version = "1.0.159", features = ['derive'] }
serde_json = "1.0.95"
